# cntx

./: .gitignore  README.md  byok.html  claude-code-alternative.html  index.html  ollama-cloud.html  script.js  styles.css  token-efficient.html
.github/workflows/: ci.yml
main/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  EXPLAIN.md  HELP.md  LICENSE  README.md
main/docs/: api-keys.md  api-references.md  apply.md  commands.md  configuration.md  custom-providers.md  mcp.md  modes.md  ollama-cloud.md  providers.md  routing.md  sandbox.md  sessions.md  skills.md  troubleshooting.md
main/src/: api_keys.rs  app.rs  apply.rs  blocklist.rs  cli.rs  config.rs  context.rs  counsel.rs  errors.rs  interactive.rs  lib.rs  main.rs  mcp.rs  models.rs  optimizer.rs  permissions.rs  router.rs  sandbox.rs  sessions.rs  skills.rs  tools.rs  ui.rs
main/src/providers/: mod.rs
website/: _headers  _redirects  byok.html  claude-code-alternative.html  docs.html  index.html  install.sh  ollama-cloud.html  robots.txt  script.js  sitemap.xml  token-efficient.html
