[package]
name = "cntx"
version = "0.2.1"
edition = "2021"
description = "Cntx Code: BYOK, token-efficient AI coding assistant with built-in doc search and token saving"
license = "MIT"
readme = "README.md"
homepage = "https://cntxcode.com"
repository = "https://github.com/virajshoor/cntx"
keywords = ["ai", "cli", "coding-assistant", "byok", "llm"]
categories = ["command-line-utilities", "development-tools"]
# Internal docs, strategy notes, and any local key material never ship with the
# published crate. Public README/docs/changelog/license are included so crates.io
# and package-manager users get useful setup material; secrets live only in a
# gitignored runtime file and are never part of the source tree.
exclude = [
    "AGENTS.md",
    "HELP.md",
    "MONETIZATION.md",
    "ROADMAP.md",
    ".github/*",
    ".cntx/*",
    "secrets.yaml",
    "api_keys.local.rs",
]

[[bin]]
name = "cntx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6"
futures-util = "0.3"
glob = "0.3"
indicatif = "0.18"
owo-colors = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = { version = "17", features = ["custom-bindings"] }
serde = { version = "1", features = ["derive"] }
termimad = "0.34"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
